# static-file-server

./: .gitignore  Cargo.toml
src/: bad.rs  download.rs  icon.rs  main.rs  path.rs  show.rs  upload.rs
