[package]
name = "static"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.2.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.69", features = ["derive"] }
serde_json = "1.0.22"
tracing = "0.1"
tracing-subscriber = "0.2"
tower-http = { version = "0.1", features = ["fs", "trace" ] }
walkdir = "2.3.2"
base64 = "0.13.0"
tower = { version = "0.4", features = ["util"] }